Fixed BUG#17476: Stored procedure not returning data when it is called first                  time per connection   Removed const_string() method from Item_string (it was only used in one   place, in a bad way). Defer possible SP variable, and access data directly   instead, in date_format item.